name:               lenses
version:            0.1.8
author:             Job Vranish
maintainer:         jvranish@gmail.com
homepage:           http://github.com/jvranish/Lenses/tree/master
license:            BSD3
license-file:       LICENSE
category:           Data
synopsis:           Simple Functional Lenses
description:
  A simple but powerful implementation of function lenses (aka functional
  references, accessors, etc..).
  They allow an easy way to manipulate fields of records

build-type:         Simple
cabal-version:      >=1.6
extra-source-files:
  src-23/Data/Lenses/Template.hs
  src-24/Data/Lenses/Template.hs
  src-25/Data/Lenses/Template.hs
  src-26/Data/Lenses/Template.hs
  src-27/Data/Lenses/Template.hs

library
  exposed-modules:
    Data.Lenses
    Data.Lenses.Template

  build-depends:
      base  >=4   && <6
    , mtl   >=1.1

  if impl(ghc)
    if impl(ghc >=9.2)
      hs-source-dirs: src-27
      build-depends:  template-haskell >=2.17.0.0

    else
      if impl(ghc >=8.0)
        hs-source-dirs: src-26
        build-depends:  template-haskell >=2.11.0.0

      else
        if impl(ghc >=7.10)
          hs-source-dirs: src-25
          build-depends:  template-haskell >=2.10.0.0

        else
          if impl(ghc >=6.12)
            hs-source-dirs: src-24
            build-depends:  template-haskell >=2.4

          else
            hs-source-dirs: src-23
            build-depends:  template-haskell >=2.2 && <2.4

  hs-source-dirs:  src/
  ghc-options:     -Wall

source-repository head
  type:     git
  location: git@github.com:jvranish/Lenses.git
